src/test/deca/syntax/invalid/include-instructionBeforeDeclaration.synt
include-instructionBeforeDeclaration.deca:3: